# aks_fastapi_02

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
